; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_http-tx-mgr.c_load_certs.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_http-tx-mgr.c_load_certs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"Failed to decode base64.\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"Failed to alloc BIO\0A\00", align 1
@.str.2 = private unnamed_addr constant [28 x i8] c"Failed to write pem to BIO\0A\00", align 1
@.str.3 = private unnamed_addr constant [29 x i8] c"Failed to read PEM from BIO\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @load_certs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_certs(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = bitcast i8* %12 to i32*
  store i32* %13, i32** %5, align 8
  store i32* null, i32** %6, align 8
  store i8* null, i8** %8, align 8
  store i32* null, i32** %9, align 8
  %14 = load i32, i32* @TRUE, align 4
  store i32 %14, i32* %10, align 4
  %15 = load i32*, i32** %3, align 8
  %16 = call i64 @sqlite3_column_text(i32* %15, i32 0)
  %17 = inttoptr i64 %16 to i8*
  store i8* %17, i8** %7, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = call i64 @g_base64_decode(i8* %18, i64* %11)
  %20 = inttoptr i64 %19 to i8*
  store i8* %20, i8** %8, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %25, label %23

23:                                               ; preds = %2
  %24 = call i32 @seaf_warning(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %52

25:                                               ; preds = %2
  %26 = call i32 (...) @BIO_s_mem()
  %27 = call i32* @BIO_new(i32 %26)
  store i32* %27, i32** %9, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %32, label %30

30:                                               ; preds = %25
  %31 = call i32 @seaf_warning(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  br label %52

32:                                               ; preds = %25
  %33 = load i32*, i32** %9, align 8
  %34 = load i8*, i8** %8, align 8
  %35 = load i64, i64* %11, align 8
  %36 = call i64 @BIO_write(i32* %33, i8* %34, i64 %35)
  %37 = load i64, i64* %11, align 8
  %38 = icmp ne i64 %36, %37
  br i1 %38, label %39, label %41

39:                                               ; preds = %32
  %40 = call i32 @seaf_warning(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0))
  br label %52

41:                                               ; preds = %32
  %42 = load i32*, i32** %9, align 8
  %43 = call i32* @PEM_read_bio_X509(i32* %42, i32* null, i32 0, i32* null)
  store i32* %43, i32** %6, align 8
  %44 = load i32*, i32** %6, align 8
  %45 = icmp ne i32* %44, null
  br i1 %45, label %48, label %46

46:                                               ; preds = %41
  %47 = call i32 @seaf_warning(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.3, i64 0, i64 0))
  br label %52

48:                                               ; preds = %41
  %49 = load i32*, i32** %5, align 8
  %50 = load i32*, i32** %6, align 8
  %51 = call i32 @X509_STORE_add_cert(i32* %49, i32* %50)
  br label %52

52:                                               ; preds = %48, %46, %39, %30, %23
  %53 = load i8*, i8** %8, align 8
  %54 = call i32 @g_free(i8* %53)
  %55 = load i32*, i32** %9, align 8
  %56 = icmp ne i32* %55, null
  br i1 %56, label %57, label %60

57:                                               ; preds = %52
  %58 = load i32*, i32** %9, align 8
  %59 = call i32 @BIO_free(i32* %58)
  br label %60

60:                                               ; preds = %57, %52
  %61 = load i32*, i32** %6, align 8
  %62 = icmp ne i32* %61, null
  br i1 %62, label %63, label %66

63:                                               ; preds = %60
  %64 = load i32*, i32** %6, align 8
  %65 = call i32 @X509_free(i32* %64)
  br label %66

66:                                               ; preds = %63, %60
  %67 = load i32, i32* %10, align 4
  ret i32 %67
}

declare dso_local i64 @sqlite3_column_text(i32*, i32) #1

declare dso_local i64 @g_base64_decode(i8*, i64*) #1

declare dso_local i32 @seaf_warning(i8*) #1

declare dso_local i32* @BIO_new(i32) #1

declare dso_local i32 @BIO_s_mem(...) #1

declare dso_local i64 @BIO_write(i32*, i8*, i64) #1

declare dso_local i32* @PEM_read_bio_X509(i32*, i32*, i32, i32*) #1

declare dso_local i32 @X509_STORE_add_cert(i32*, i32*) #1

declare dso_local i32 @g_free(i8*) #1

declare dso_local i32 @BIO_free(i32*) #1

declare dso_local i32 @X509_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
